--- a/styles.css
+++ b/styles.css
@@ -43,14 +43,16 @@ h4 {
 }
 #contacts{
   text-align: center;
-  padding: 20px;
+  
   color: black;
-  width: 78%;
-  padding-left:20px;
+
+  
   justify-content: space-between;
 } 
 .footer{
   text-align: center;
-  color:white ;
+  color:black ;
+  tab-size: 3vh;
+  padding: 5%;
 }
   
